--- a/HandsworthRobotics/INDEX(homepage)/pj.css
+++ b/HandsworthRobotics/INDEX(homepage)/pj.css
@@ -4,7 +4,7 @@
   body {
     background-color: #2d4d82;
     font-family: 'Merriweather', sans-serif;
-    margin:none;
+    margin:0;
     }
 
   header {
